--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body class="lexend-font">
     <header>
         <!-- navbar start-->
-        <div class="bg-violet-100 ">
-            <nav class=" flex lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl  items-center  py-8">
-                <button id="btn-blog" class="font-bold bg-lime-300 rounded-lg py-3 px-8 ">Blog</button>
+        <div class="fixed  bg-slate-100 backdrop-blur-lg w-full">
+            <nav class=" flex lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl items-center py-8">
+                <button id="btn-blog" class="font-bold bg-lime-400 rounded-lg py-3 px-8 ">Blog</button>
                 <!-- responsive site added bars start -->
                 <i class="fa-solid fa-bars lg:hidden pl-48"></i>
                 <!-- responsive site added bars end -->
@@ -41,19 +41,37 @@
                 </div>
                 <div class="lg:flex gap-3 items-center hidden">
                     <img src="./assets/coin.png" alt="">
-                    <p>5500 BDT</p>
+                    <p><span id="main-balance">5500</span> BDT</p>
                 </div>
             </nav>
         </div>
         <!-- navbar end -->
         <!-- buttons container start -->
-        <div class="flex justify-center gap-6  py-20 mx-auto">
-            <button id="btn-donation" class="font-bold bg-lime-300 rounded-lg py-4 px-8 ">Donation</button>
-            <button id="btn-history" class="border-2 py-4 px-8 rounded-lg">History</button>
+        <div class="flex justify-center gap-6 pt-40 pb-20 mx-auto">
+            <button id="btn-donation" class="  font-bold bg-lime-400 rounded-lg py-4 px-8 ">Donation</button>
+            <button id="btn-history" class="border-2 font-bold py-4 px-8 rounded-lg">History</button>
         </div>
         <!-- buttons container end -->
     </header>
     <main>
+        <!-- modal section start -->
+
+        <button class="btn hidden" onclick="my_modal_1.showModal()">open modal</button>
+        <dialog id="my_modal_1" class="modal ">
+            <div class="modal-box">
+                <h3 class=" font-bold text-4xl flex justify-center">Congrates!</h3>
+               <div class="flex justify-center pt-4" > <img src="./assets/coin.png" alt=""></div>
+                <p class="py-4 flex justify-center">You have donated for Humankind</p>
+                <h2 class="flex justify-center font-bold text-lg">Successfully</h2>
+                <div class="modal-action flex justify-center">
+                    <form method="dialog">
+
+                        <button class="btn ">close confirmation</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
+        <!-- modal section end -->
         <!-- cards section start -->
         <section id="section-donation">
             <!-- firest card container start -->
@@ -64,7 +82,7 @@
                         <button class="bg-gray-300 px-4 py-2 rounded-lg my-4">
                             <div class="flex items-center gap-2 ">
                                 <img src="./assets/coin.png" alt="">
-                                <p>0 BDT</p>
+                                <p><span id="firest-card-donated-amount">1000</span> BDT</p>
                             </div>
                         </button>
                         <p class="font-bold">Donate for Flood at Noakhali, Bangladesh</p>
@@ -74,9 +92,10 @@
                             contribution, big or small, makes difference. Please join us in supporting the relief
                             efforts
                             and making a positive impact on the lives of those in need.</p>
-                        <input type="text" placeholder="Write Donate Amount"
+                        <input id="firest-card-container-input-field" type="text" placeholder="Write Donate Amount"
                             class="input input-bordered w-full max-w-[580px] my-3" />
-                        <button class="font-bold bg-lime-300 rounded-lg py-4 my-4 lg:w-[580px] w-full">Donate
+                        <button id="firest-card-container-donate-btn"
+                            class="font-bold bg-lime-400 rounded-lg py-4 my-4 lg:w-[580px] w-full">Donate
                             Now</button>
                     </div>
                 </div>
@@ -90,7 +109,7 @@
                         <button class="bg-gray-300 px-4 py-2 rounded-lg my-4">
                             <div class="flex items-center gap-2 ">
                                 <img src="./assets/coin.png" alt="">
-                                <p>0 BDT</p>
+                                <p><span id="secend-card-donated-amount">1000</span> BDT</p>
                             </div>
                         </button>
                         <p class="font-bold ">Donate for Flood Relief in Feni,Bangladesh</p>
@@ -101,9 +120,10 @@
                             crucial support and help rebuild lives in the aftermath of this disaster. Every contribution
                             counts towards making a real difference. Please consider donating today to assist those in
                             urgent need.</p>
-                        <input type="text" placeholder="Write Donate Amount"
+                        <input id="secend-card-container-input-field" type="text" placeholder="Write Donate Amount"
                             class="input input-bordered w-full max-w-[580px] my-4" />
-                        <button class="font-bold bg-lime-300 rounded-lg py-4 my-4 w-full lg:w-[580px]">Donate
+                        <button id="secend-card-container-donate-btn"
+                            class="font-bold bg-lime-400 rounded-lg py-4 my-4 w-full lg:w-[580px]">Donate
                             Now</button>
                     </div>
                 </div>
@@ -117,7 +137,7 @@
                         <button class="bg-gray-300 px-4 py-2 rounded-lg my-4">
                             <div class="flex items-center gap-2 ">
                                 <img src="./assets/coin.png" alt="">
-                                <p>0 BDT</p>
+                                <p><span id="third-card-donated-amount">1000</span> BDT</p>
                             </div>
                         </button>
                         <p class="font-bold my-4">Aid for Injured in the Quota Movement</p>
@@ -130,9 +150,10 @@
                             donation plays a vital role in alleviating their suffering and aiding in their recovery.
                             Please
                             consider making a donation to support these brave individuals in their time of need. </p>
-                        <input type="text" placeholder="Write Donate Amount"
+                        <input id="third-card-container-input-field" type="text" placeholder="Write Donate Amount"
                             class="input input-bordered w-full max-w-[580px] my-5" />
-                        <button class="font-bold bg-lime-300 rounded-lg py-4 my-4 w-full lg:w-[580px]">Donate
+                        <button id="third-card-container-donate-btn"
+                            class="font-bold bg-lime-400 rounded-lg py-4 my-4 w-full lg:w-[580px]">Donate
                             Now</button>
                     </div>
                 </div>
@@ -142,32 +163,11 @@
         <!-- cards section end -->
         <!-- history section start -->
         <section id="section-history" class="hidden">
-            <nav>
-                <div class="bg-violet-100 ">
-                    <nav class=" flex lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl  items-center  py-8">
-                        <button id="btn-blog" class="font-bold bg-lime-300 rounded-lg py-3 px-8 ">Blog</button>
-                        <!-- responsive site added bars start -->
-                        <i class="fa-solid fa-bars lg:hidden pl-48"></i>
-                        <!-- responsive site added bars end -->
-                        <div class="lg:flex gap-3 items-center hidden">
-                            <img src="./assets/logo.png" alt="">
-                            <p class="font-bold">Donate Bangladesh</p>
-                        </div>
-                        <div class="lg:flex gap-3 items-center hidden">
-                            <img src="./assets/coin.png" alt="">
-                            <p>5500 BDT</p>
-                        </div>
-                    </nav>
-                </div>
-            </nav>
-            <div class="flex justify-center gap-6  py-20 mx-auto">
-                <button class="font-bold bg-lime-300 rounded-lg py-4 px-8 ">Donation</button>
-                <button class="border-2 py-4 px-8 rounded-lg">History</button>
-            </div>
+
         </section>
         <!-- history section end -->
     </main>
-    <footer class="bg-violet-100 h-24 mt-20">
+    <footer id="footer" class="bg-violet-100 h-24 mt-20">
 
     </footer>
     <script src="./js/index.js"></script>
