--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 </head>
 
 <body class="lexend-font">
-
-    <section class="pb-12  ">
+    <section class="pb-12   ">
         <!-- navbar start-->
-        <div class="fixed top-0 bg-stone-100 w-full">
+        <div class="fixed top-0 bg-stone-100 w-full backdrop-blur-lg">
             <nav class=" flex lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl items-center py-8">
                 <button id="btn-blog" class="font-bold bg-lime-400 rounded-lg py-3 px-8 ">Blog</button>
                 <!-- responsive site added bars start -->
@@ -47,12 +46,9 @@
             </nav>
         </div>
         <!-- navbar end -->
-        <header class=" ">
-        
+        <header>
             <!-- buttons container start -->
-
-            <div
-                class=" backdrop-blur  fixed  w-full  flex justify-center gap-6 mt-28 pb-2 pt-12 mx-auto">
+            <div class="  fixed backdrop-blur-lg w-full  flex justify-center gap-6 mt-28 pb-2 pt-12 mx-auto">
                 <button id="btn-donation" class="  font-bold bg-lime-400 rounded-lg py-4 px-8 ">Donation</button>
                 <button id="btn-history" class="border-2 font-bold py-4 px-8 rounded-lg">History</button>
             </div>
@@ -61,7 +57,6 @@
     </section>
     <main class="mt-52">
         <!-- modal section start -->
-
         <button class="btn hidden" onclick="my_modal_1.showModal()">open modal</button>
         <dialog id="my_modal_1" class="modal ">
             <div class="modal-box">
