--- a/Blog.html
+++ b/Blog.html
@@ -29,7 +29,7 @@
 <body class="lexend-font">
     <header>
         <nav>
-            <div class="bg-stone-100 fixed w-full top-0">
+            <div class="bg-yellow-100 fixed w-full top-0">
                 <nav class=" flex w-full lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl  items-center  py-8">
                     <button id="btn-home" class="font-bold bg-lime-400 rounded-lg py-3 px-8 ">Home</button>
                     <!-- responsive site added bars start -->
@@ -51,6 +51,7 @@
         <section id="section-faq">
             <h2 class="font-bold text-4xl pl-6 lg:pl-20 mt-44">Important FAQ
                 <i class="fa-solid fa-question"></i>
+
             </h2>
             <div class="my-14 w-[90%] mx-auto">
                 <div class="collapse collapse-arrow  border border-gray-300">
