--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="lexend-font">
     <section class="pb-12   ">
         <!-- navbar start-->
-        <div class="fixed top-0 bg-stone-100 w-full backdrop-blur-lg">
+        <div class="fixed top-0 bg-yellow-100 w-full backdrop-blur-lg">
             <nav class=" flex lg:justify-between mx-14 lg:mx-auto lg:max-w-6xl items-center py-8">
                 <button id="btn-blog" class="font-bold bg-lime-400 rounded-lg py-3 px-8 ">Blog</button>
                 <!-- responsive site added bars start -->
@@ -168,7 +168,7 @@
         </section>
         <!-- history section end -->
     </main>
-    <footer id="footer" class="bg-stone-100 h-24 mt-20">
+    <footer id="footer" class="bg-yellow-100 h-24 mt-20">
 
     </footer>
     <script src="./js/index.js"></script>
