--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- buttons container end -->
         </header>
     </section>
-    <main class="mt-52">
+    <main class="mt-60">
         <!-- modal section start -->
         <button class="btn hidden" onclick="my_modal_1.showModal()">open modal</button>
         <dialog id="my_modal_1" class="modal ">
@@ -77,7 +77,7 @@
         <section id="section-donation">
             <!-- firest card container start -->
             <div class=" lg:max-w-[1200px] mx-auto">
-                <div class=" lg:flex mx-auto lg:gap-8 border-2 py-4 lg:w-full w-[90%] px-5 rounded-2xl">
+                <div class=" lg:flex mx-auto lg:gap-10 border-2 p-6 lg:w-full w-[90%]  rounded-2xl">
                     <img src="./assets/noakhali.png" alt="">
                     <div class="lg:mt-0 mt-8">
                         <button class="bg-gray-200 px-4 py-2 rounded-lg ">
@@ -104,7 +104,7 @@
             <!-- firest card container end -->
             <!-- secend card container start -->
             <div class=" max-w-[1200px] mx-auto mt-8">
-                <div class=" lg:flex mx-auto lg:w-full w-[90%] gap-8 border-2 py-4 px-5 rounded-2xl">
+                <div class=" lg:flex mx-auto lg:w-full w-[90%] gap-10 border-2 p-6 rounded-2xl">
                     <img src="./assets/feni.png" alt="">
                     <div class="lg:mt-0 mt-8">
                         <button class="bg-gray-200 px-4 py-2 rounded-lg ">
@@ -132,7 +132,7 @@
             <!-- secend card container end -->
             <!-- third card container start -->
             <div class=" max-w-[1200px] mx-auto mt-8">
-                <div class=" lg:flex mx-auto lg:w-full w-[90%] gap-8 border-2 py-4 px-5 rounded-2xl">
+                <div class=" lg:flex mx-auto lg:w-full w-[90%] gap-10 border-2 p-6 rounded-2xl">
                     <img src="./assets/quota-protest.png" alt="">
                     <div class="lg:mt-0 mt-9">
                         <button class="bg-gray-200 px-4 py-2 rounded-lg ">
